Archive2/26/6d8881049b099b/output
main.cpp: In function 'int main()':
main.cpp:33:18: error: no match for 'operator*' (operand types are 'R' and 'int')
     auto x = R() * 1;
                  ^
